--- a/.github/workflows/Environmentcontext.yml
+++ b/.github/workflows/Environmentcontext.yml
@@ -1,7 +1,18 @@
+name: 08-01-Contexts - github
 
-          echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
-          echo "Overwritten env: ${{ env.MY_OVERWRITTEN_VAR }}"
-      - name: Print Env Variables
-        run: |
-          echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
-          echo "Overwritten env: ${{ env.MY_OVERWRITTEN_VAR }}"
+on:
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Display Event Information
+      run: |
+        echo "Event Name: ${{ github.event_name }}"
+        echo "Ref: ${{ github.ref }}"
+        echo "SHA: ${{ github.sha }}"
+        echo "Actor: ${{ github.actor }}"
+        echo "Workflow: ${{ github.workflow }}"
+        echo "Run ID: ${{ github.run_id }}"
+        echo "Run number: ${{ github.run_number }}"
