--- a/.github/actions/pingurl/Dockerfile
+++ b/.github/actions/pingurl/Dockerfile
@@ -1,1 +1,13 @@
+FROM python:alpine3.19
+
+WORKDIR /app
+
+COPY requirements.txt .
+
+RUN python -V
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+CMD [ "python", "/app/main.py" ]
 
