--- a/.github/workflows/Docker.yaml
+++ b/.github/workflows/Docker.yaml
@@ -23,11 +23,11 @@ jobs:
       run: mvn clean install
       
     - name: Build Docker image
-      run: docker build -t username/app .
+      run: docker build -t ranjith3/todoapp:10.0 .
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push image to Docker Hub
-      run: docker push username/app
+      run: docker push ranjith3/todoapp:10.0
 
