--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      
+          
       - name: Cache Maven packages
         uses: actions/cache@v4.0.2
         with:
@@ -33,11 +33,20 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
   jacoco:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest  # Change to Linux-based runner
     needs: cache
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2
+        
       - name: Build with Maven
         run: mvn -B package -Pcoverage
+
       - name: Generate JaCoCo badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
@@ -66,27 +75,41 @@ jobs:
         with:
           java-version: 17
       
-      - name: Install Maven
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2
+
+      - name: Check SonarQube accessibility
+        shell: powershell
         run: |
-          if ! command -v mvn &> /dev/null; then
-            echo "Maven not found. Installing Maven..."
-            sudo apt update
-            sudo apt install -y maven
-          else
-            echo "Maven is already installed."
-          fi
+          $Response = Invoke-WebRequest -Uri http://localhost:9000 -Method Head -ErrorAction Stop
+          if ($Response.StatusCode -eq 200) {
+              Write-Output "SonarQube is accessible."
+          } else {
+            Write-Output "SonarQube is not accessible."
+            exit 1
+          }
+
+      - name: Download JaCoCo coverage report
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/  # Ensure this matches the upload path
 
       - name: Build and analyze
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=todoapp -Dsonar.projectName='todoapp'
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
   artifacts:
     runs-on: self-hosted
     needs: sonarqube
     steps:
-      - run: mkdir staging && cp target/*.jar staging
+      - name: Copy JAR file to staging
+        run: |
+          mkdir staging
+          Copy-Item target\*.jar staging
+        shell: powershell
+        
       - uses: actions/upload-artifact@v4
         with:
           name: Package
@@ -96,9 +119,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: artifacts
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        
       - name: Download web-app content
         uses: actions/download-artifact@v4.1.8
         with:
@@ -132,14 +152,25 @@ jobs:
           asset_content_type: application/zip
           
   docker:
-    runs-on: self-hosted
-    needs: sonarqube
+    runs-on: ubuntu-latest  # Changed to ubuntu-latest
+    needs: release
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2
+        
+      - name: Build with Maven
+        run: mvn -B package
+        
       - name: Build Docker image
-        run: docker build -t ranjith3/todoapp .
+        run: docker build -t vijaynvb/todoapp .
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push image to Docker Hub
-        run: docker push ranjith3/todoapp
+        run: docker push vijaynvb/todoapp
