--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -167,10 +167,10 @@ jobs:
         run: mvn -B package
         
       - name: Build Docker image
-        run: docker build -t vijaynvb/todoapp .
+        run: docker build -t ranjith3/todoapp .
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push image to Docker Hub
-        run: docker push vijaynvb/todoapp
+        run: docker push ranjith3/todoapp
